[metadata]
license_file = LICENSE

[flake8]
max-line-length = 99

[pylint.message-control]
disable = C0330,R0801,R0913,R0904,R0903,R0902,W0511,C0116,C0115,W0703,R0914,R0914,C0302,R0912,R0915,R0401

[tool:pytest]
testpaths = tests
addopts = -rsxX
filterwarnings =
    error
    ignore::DeprecationWarning
    ignore::telegram.utils.deprecate.TelegramDeprecationWarning

[mypy]
warn_unused_ignores = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
show_error_codes = True

# See PTB issue #2166
[mypy-telegram.*]
ignore_missing_imports = True
