[metadata]
license_file = LICENSE

[flake8]
max-line-length = 99

[pylint.message-control]
disable = E0401,too-few-public-methods

[tool:pytest]
testpaths = tests
addopts = -rsxX
filterwarnings =
    error
    ignore::DeprecationWarning
asyncio_mode = auto

[mypy]
warn_unused_ignores = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
show_error_codes = True

# See PTB issue #2166
[mypy-telegram.*]
ignore_missing_imports = True
